fix: child rules is good also when ACCEPTED